# BACAP_Parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/BACAP_Parser/: AdvType.py  Advancement.py  Color.py  Criteria.py  CriteriaList.py  Datapack.py  ExtendedDict.py  Item.py  PackMCMeta.py  Parser.py  Rewards.py  TabNameMapper.py  __init__.py  components_decoder.py  constants.py  nbt_decoder.py  patterns.py  utils.py
src/BACAP_Parser/core/: Advancement.py  Item.py  Tab.py
src/BACAP_Parser/core/advancement_components/: Criteria.py  CriteriaList.py  Display.py
src/BACAP_Parser/decoding/: __init__.py  components_decoder.py  nbt_decoder.py  patterns.py
src/BACAP_Parser/utils/: Color.py  ExtendedDict.py  __init__.py  constants.py  exceptions.py  utils.py
